// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product should render properly with no similarProducts  1`] = `
<glamorous(div)>
  <glamorous(h1)>
    name
  </glamorous(h1)>
  <glamorous(h3)>
    REF. code
  </glamorous(h3)>
  <glamorous(div)>
    <ImageSlider
      alt="name"
      imageIDList={
        Array [
          "image1",
        ]
      }
      imageOptions={
        Object {
          "crop": "fit",
          "height": 1080,
          "width": 1080,
        }
      }
    />
  </glamorous(div)>
  <ProductInfo
    descriptions={Array []}
    marketingDescriptions={Object {}}
    productType="descriptionType"
  />
  <glamorous(div) />
  <glamorous(div)>
    <ProductInfoBadge
      currentStoreStock={
        Object {
          "stockStatus": undefined,
          "storeStock": undefined,
        }
      }
      hasNearbyStores={true}
      loyaltyProgram={Object {}}
      marketingAttributes={Object {}}
      price={Object {}}
      pricingInfo={Object {}}
      productCode="code"
      productName="name"
      productSlug="slug"
    />
  </glamorous(div)>
</glamorous(div)>
`;

exports[`Product should render properly with similarProducts  1`] = `
<glamorous(div)>
  <glamorous(h1)>
    name
  </glamorous(h1)>
  <glamorous(h3)>
    REF. code
  </glamorous(h3)>
  <glamorous(div)>
    <ImageSlider
      alt="name"
      imageIDList={
        Array [
          "image1",
        ]
      }
      imageOptions={
        Object {
          "crop": "fit",
          "height": 1080,
          "width": 1080,
        }
      }
    />
  </glamorous(div)>
  <ProductInfo
    descriptions={Array []}
    marketingDescriptions={Object {}}
    productType="descriptionType"
  />
  <glamorous(div)>
    <SimilarProducts
      similarProducts={
        Array [
          Object {
            "code": "prod1",
          },
        ]
      }
      title="anche"
    />
  </glamorous(div)>
  <glamorous(div)>
    <ProductInfoBadge
      currentStoreStock={
        Object {
          "stockStatus": undefined,
          "storeStock": undefined,
        }
      }
      hasNearbyStores={true}
      loyaltyProgram={Object {}}
      marketingAttributes={Object {}}
      price={Object {}}
      pricingInfo={Object {}}
      productCode="code"
      productName="name"
      productSlug="slug"
    />
  </glamorous(div)>
</glamorous(div)>
`;

exports[`Product should return null when productInfo is empty 1`] = `null`;
